[project]
name = "TermUI"
version = "1.1.3"
authors = [
  { name="iiVeil", email="email@email.com" },
]
description = "TermUI is a rapid development user interface library for python command-line interface applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/iiVeil/TermUi"
