[project]
dynamic = ["dependencies"]
name = "TermUI"
version = "1.1.4"
authors = [
  { name="iiVeil", email="email@email.com" },
]
description = "TermUI is a rapid development user interface library for python command-line interface applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/iiVeil/TermUi"
"Documentation" = "https://pytermui.readthedocs.io/en/latest/"